# image-wizard

./: .gitignore  README.md  pyproject.toml
imagewizard/: __init__.py  cli.py  cluster.py  config.py  datefind.py  db.py  decode.py  geo.py  metadata.py  ocr.py  orient_cli.py  persons.py  pipeline.py  scan.py  search_cli.py  thumbs.py  video.py
imagewizard/models/: __init__.py  clip.py  faces.py  orientation.py  yolo.py
imagewizard/web/: app.py  log_filter.py
imagewizard/web/templates/: _camera_grid.html  _faces_grid.html  _live_badge.html  _nearby_grid.html  _person_photo_grid.html  _photo_grid.html  about.html  base.html  camera_detail.html  cameras.html  faces.html  faces_label.html  geotag.html  map.html  nearby.html  person.html  photo.html  rotations.html  search.html  timeline.html
tests/: test_collate.py  test_datefind.py  test_db.py  test_export.py  test_geo.py  test_near_dup.py  test_orientation.py  test_reachable.py  test_visible_roots.py  test_walk.py
tools/: build_landmarks.py
